--- a/config/i3status.conf
+++ b/config/i3status.conf
@@ -53,7 +53,7 @@ wireless _first_ {
 battery all {
         # format = "%status %percentage %remaining %emptytime"
         format = " %status %percentage"
-        format_down = "No battery"
+        format_down = ""
         last_full_capacity = true
         integer_battery_capacity = true
         # status_chr = ""
