--- a/config/barrier.conf
+++ b/config/barrier.conf
@@ -29,7 +29,7 @@ end
 
 section: options
 	relativeMouseMoves = false
-	screenSaverSync = true
+	screenSaverSync = false
 	win32KeepForeground = false
 	clipboardSharing = true
 	switchCorners = none 
