--- a/config/barrier_ingame.conf
+++ b/config/barrier_ingame.conf
@@ -28,7 +28,7 @@ end
 
 section: options
 	relativeMouseMoves = false
-	screenSaverSync = true
+	screenSaverSync = false
 	win32KeepForeground = false
 	clipboardSharing = true
 	switchCorners = none 
