--- a/config/picom.conf
+++ b/config/picom.conf
@@ -93,14 +93,14 @@ fading = false
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.1;
+fade-in-step = 0.03;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.1;
+fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -123,7 +123,7 @@ inactive-opacity = 1
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+#frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0
@@ -176,8 +176,8 @@ opacity-rule = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "gaussian"
-blur-size = 3
-blur-deviation = 3
+blur-size = 12
+blur-deviation = 5
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
