--- a/config/barrier_nuc.conf
+++ b/config/barrier_nuc.conf
@@ -7,7 +7,7 @@ section: screens
 		preserveFocus = false
 		switchCorners = none 
 		switchCornerSize = 0
-	max-xps13:
+	max-framework-manjaro:
 		halfDuplexCapsLock = false
 		halfDuplexNumLock = false
 		halfDuplexScrollLock = false
@@ -22,9 +22,9 @@ end
 
 section: links
 	max-nuc:
-		right = max-xps13
-	max-xps13:
-		left = max-nuc
+		right = max-framework-manjaro
+	max-framework-manjaro:
+		left = max-framework-manjaro
 end
 
 section: options
