--- a/config/i3status.conf
+++ b/config/i3status.conf
@@ -1,79 +1,93 @@
-#
-#https://fontawesome.com/cheatsheet?from=i
-#
-
+# see "man i3status" for documentation.
 # It is important that this file is edited as UTF-8.
 # The following line should contain a sharp s:
 # ß
 # If the above line is not correctly displayed, fix your editor first!
+#https://fontawesome.com/cheatsheet?from=i
 
 general {
-        colors = true
-        interval = 1
-        color_good = "#2AA198"
-        color_bad = "#586E75"
-        color_degraded = "#DC322F"
+    interval 	    = 1
+    colors 	    = true
+    color_good      = '#88b090'
+    color_degraded  = '#ccdc90'
+    color_bad       = '#e89393'
 }
 
-# order += "ipv6"
-order += "cpu_usage"
+order += "volume master"
 order += "disk /"
-# order += "disk /home"
-order += "wireless _first_"
+#order += "disk /home"
+#order += "run_watch DHCP"
+#order += "ipv6"
+#order += "run_watch VPN"
+order += "wireless wlp166s0"
 order += "ethernet _first_"
-# order += "load"
-order += "memory"
+order += "cpu_usage 0"
+order += "load"
+order += "cpu_temperature 0"
 order += "battery all"
 order += "tztime local"
 
-cpu_usage {
-        format = " %usage "
-}
-
-load {
-        format = " load %1min "
-        # max_threshold = 0.3
-}
-
-disk "/" {
-        format = " %avail "
+wireless wlp166s0 {
+    format_up = "%quality %essid %ip"
+    format_down = ""
 }
 
 ethernet _first_ {
-# if you use %speed, i3status requires root privileges
-        format_up = " lan: %ip %speed "
-        format_down = ""
-}
-
-wireless _first_ {
-        format_up = "  (%quality at %essid) %ip"
-        format_down = " down"
+    #if you use %speed, i3status requires root privileges
+    format_up = "lan: %ip (%speed)"
+    format_down = ""
 }
 
 battery all {
-        # format = "%status %percentage %remaining %emptytime"
-        format = " %status %percentage"
-        format_down = ""
-        last_full_capacity = true
-        integer_battery_capacity = true
-        # status_chr = ""
-        status_chr = "⚡"
-        status_bat = " "
-        status_unk = "?"
-        # status_unk = ""
-        # status_full = ""
-        status_full = " "
-        low_threshold = 15
-        threshold_type = time
+    format = "%status %percentage %remaining"
+    #format = "%status %percentage"
+    format_down = ""
+    last_full_capacity = true
+    integer_battery_capacity = true
+    low_threshold = 11
+    threshold_type = percentage
+    hide_seconds = true
+    status_chr = ""
+    status_bat = ""
+    status_unk = ""
+    status_full = ""
 }
 
-memory {
-        format = "  %used / %available"
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+run_watch DHCP {
+    pidfile = "/var/run/dhclient*.pid"
+}
+
+run_watch VPN {
+    pidfile = "/var/run/vpnc/pid"
 }
 
 tztime local {
-        format = " %Y-%m-%d  %H:%M:%S"
-        # format = " %d.%m. %H:%M "
+    format = " %A%e.%B KW:%V  %H:%M:%S"
+}
+
+load {
+    format = " %1min"
+}
+
+cpu_usage {
+    format = " %usage"
+}
+
+cpu_temperature 0 {
+	format = " %degrees°C"
+}
+
+disk "/" {
+	format = " %avail"
+	prefix_type	= custom
+	low_threshold = 20
+	threshold_type = percentage_avail
+}
+
+volume master {
+    format = " %volume "
+    format_muted = " "
+    device = "default"
+    mixer = "Master"
+    mixer_idx = 0
 }
