--- a/config/libinput-gestures.conf
+++ b/config/libinput-gestures.conf
@@ -1,21 +1,6 @@
-gesture: pinch out 2     xdotool key ctrl+KP_Add
-gesture: pinch in 2    xdotool key ctrl+KP_Subtract
+# libinput-gesture config, see https://github.com/bulletmark/libinput-gestures
 
-gesture: swipe up 3	xdotool key super+f
-gesture: swipe down 3	xdotool key super+Shift+space
-gesture: swipe right 3	xdotool key super+ctrl+Left
-gesture: swipe left 3	xdotool key super+ctrl+Right
-
-#gesture: swipe up 4	xdotool key super+Up
-#gesture: swipe down 4	xdotool key super+Down
-#gesture: swipe right 4	xdotool key super+Right
-#gesture: swipe left 4	xdotool key super+Left
-#
-#gesture: pinch in 3	xdotool key super+w
-#gesture: pinch out 3	xdotool key super+a
-#
-#gesture: pinch in 4     xdotool key super+w
-#gesture: pinch out 4    xdotool key super+a
-#
-#gesture: pinch in 5     xdotool key super+w
-#gesture: pinch out 5    xdotool key super+a
+gesture: swipe up 3	i3-msg fullscreen
+gesture: swipe down 3	i3-msg floating toggle
+gesture: swipe right 3	i3-msg workspace prev
+gesture: swipe left 3	i3-msg workspace next
